--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,11 +21,6 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 
-.starter-template {
-  padding: 3rem 1.5rem;
-  text-align: center;
-}
-
 html {
   position: relative;
   min-height: 100%;
@@ -72,6 +67,10 @@ header input::-moz-input-placeholder {
 
 header input::-ms-input-placeholder {
   color:#fff;
+}
+
+.hidden {
+  display: none;
 }
 
 button.activity-add,
@@ -121,12 +120,31 @@ ul.todo li:last-child {
   margin: 0px
 }
 
+
 ul.todo li div.buttons{
   width: 100%;
   height: 50px;
   position: absolute;
   top:0;
   right: 0;
+}
+
+button#hideShow {
+    background: none;
+    border: 1px solid #228B22;
+    box-shadow: none;
+    color: #228B22;
+    margin: 0 auto;
+    display: block;
+}
+
+button#hideShow:hover {
+  box-shadow:  10px 10px 5px #EDF0F1;
+}
+
+button#hideShow:before {
+  content: ' Hide/Show Completed Items ';
+  font-size: 12px;
 }
 
 ul.todo li.strike-through {
@@ -186,7 +204,11 @@ i.fa.fa-check.green:hover {
   border: 1px solid #228B22;
 }
 
-
+.hide-show-completed-items {
+    width: 100%;
+    height: 96px;
+    padding: 50px 0;
+}
 
 
 
